--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JURAGANKOIN99 | Situs Slot Online Terbaik - JURAGANKOIN99</title>
+	<title>JURAGANKOIN99 Tempat Bermain Sang Juragan Disini</title>
     <meta name="description" content="JuraganKoin99 adalah situs terbaik dan terpercaya No #1 di Indonesia. Dengan tingkat kemenangan yang tinggi, JuraganKoin99 juga memberikan pelayanan terbaik online 24 jam untuk anda semua.">
     <meta name="keywords" content="JURAGANKOIN99, JURAGANKOIN99 login, JURAGANKOIN99 slot, link alternatif JURAGANKOIN99, JURAGANKOIN99 rtp">
     <meta name="author" content="JURAGANKOIN99">
 	<meta name="robots" content="index, follow"/>
     <meta content="website" property="og:type">
 	<meta property="og:site_name" content="JURAGANKOIN99"/>
-    <meta content="JURAGANKOIN99 | Situs Slot Online Terbaik - JURAGANKOIN99" property="og:title">
-    <meta content="JuraganKoin99 adalah situs terbaik dan terpercaya No #1 di Indonesia. Dengan tingkat kemenangan yang tinggi, JuraganKoin99 juga memberikan pelayanan terbaik online 24 jam untuk anda semua." property="og:description">
-    <meta content="https://juragankoin99-login.com" property="og:url">
+    <meta content="JURAGANKOIN99 Tempat Bermain Sang Juragan Disini" property="og:title">
+    <meta content="JURAGANKOIN99 Pilihan Tepat Bermain dan memberikan rasa sensai kemenangan setiap hari Bersama JURAGANKOIN99" property="og:description">
+    <meta content="https://juragankoin99pro.pages.dev/" property="og:url">
 	<meta property="og:locale" content="id_ID"/>
     <meta name="geo.country" content="ID"/>
     <meta name="language" content="ID"/>
     <meta name="tgn.nation" content="Indonesia"/>
     <meta name="rating" content="general"/>
-	<link rel="amphtml" href="https://juragankoin99-login.com"/>
-	<link rel="canonical" href="https://juragankoin99-sweet.com/"/>
+	<link rel="amphtml" href="https://juragankoin99pro.pages.dev/"/>
+	<link rel="canonical" href="https://juragankoin99pro.tumblr.com/"/>
 	<link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 	
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
